# AegisAI

./: .gitignore  .kube-linter.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_IMPLEMENTATION.md  ISSUE_CANDIDATES_AUTOMATION.md  README.md  SECURITY.md  TODO.md  action.yml  aegisai.example.yml  diffnames.txt  docker-compose.override.yml  docker-compose.yml  documents.patch  drift-inject.ps1  et --hard 0ddd78b  guard.py  main.txt  netlify.toml  package-lock.json  package.json  solve_6_issues.py  split_guard.py  test-monitoring.ps1  test-monitoring.sh  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
Automated Financial Reporting with Deep Learning/: app.py
Bitcoin Price Prediction Web App/: app.py
Engineering Career Role Prediction/: app.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Untitled  alembic.ini  audit_test_result.txt  auth_errors.txt  auth_test.txt  backend_structure.txt  conftest.txt  download_model.py  final2.txt  final3.txt  final_result.txt  isolated_test.py  lifecycle.txt  pdf_export.txt  pytest.ini  rag_ingest.txt  rc_result.txt  req_no_torch.txt  requirements.txt  run_local_test.py  structure.txt  test_paginated.py  test_result.txt
docs/: FAQ.md  api-reference.md  getting-started.md  guard-module.md  regulations.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  (+6 more)
guard-sdk/: README.md  pyproject.toml
guard-sdk/src/aegisai_guard/: decision_engine.py  exceptions.py  intent_classifier.py  llm_guard.py  regex_rules.py
guard-sdk/tests/: test_guard_sdk.py  test_guard_sdk_extended.py  test_import.py
(+642 files in other folders)
