[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegisai-guard"
version = "0.1.0"
description = "AegisAI LLM Guard — real-time prompt injection detection SDK"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
authors = [{ name = "Sarthak Doshi", email = "sdsarthak@example.com" }]
keywords = ["llm", "guard", "prompt-injection", "ai-safety", "guardrails", "eu-ai-act"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "transformers>=4.37",
    "numpy>=1.24",
    "sentencepiece>=0.2.0",
]
dev = ["pytest>=8.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/SdSarthak/AegisAI"
Repository = "https://github.com/SdSarthak/AegisAI"
Issues = "https://github.com/SdSarthak/AegisAI/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aegisai_guard"]
